# chisel

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: chisel.mdc
docs/: cli-reference.md  quickstart.md  workflow-patterns.md
skills/chisel/: SKILL.md
skills/chisel/examples/: decompose-epic.sh
skills/chisel/references/: commands.md
src/chisel/: __init__.py  cli.py  decompose.py  hooks.py  models.py  storage.py  utils.py
src/chisel_tasks.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_acceptance.py  test_cli.py  test_decompose.py  test_hooks.py  test_models.py  test_storage.py  test_utils.py
